Intermittent <random test> | application crashed [@ static void MOZ_Crash(const char *, int, const char *)] (thread-safety assertion when destroying nsDNSPrefetch::mListener)
Categories
(Core :: Networking, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox66 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: kershaw)
References
Details
(Keywords: crash, intermittent-failure, regression, Whiteboard: [necko-triaged][stockwell unknown])
Crash Data
Attachments
(2 files, 1 obsolete file)
#[markdown(off)]
Filed by: btara [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=234613941&repo=autoland
19:34:29 INFO - TEST-START | /css/css-multicol/column-count-used-001.html
19:34:29 INFO - PID 5288 | ++DOCSHELL 20DB0C00 == 6 [pid = 3800] [id = {2e4a89c2-8904-4270-b7a4-7f8a95e001e4}]
19:34:29 INFO - PID 5288 | ++DOMWINDOW == 13 (20A42820) [pid = 3800] [serial = 13] [outer = 00000000]
19:34:29 INFO - PID 5288 | ++DOMWINDOW == 14 (20DB1C00) [pid = 3800] [serial = 14] [outer = 20A42820]
19:34:29 INFO - PID 5288 | ++DOCSHELL 07C33400 == 2 [pid = 4932] [id = {279aa087-1cb5-4d0c-bc96-bbe32e86a780}]
19:34:29 INFO - PID 5288 | ++DOMWINDOW == 4 (01073700) [pid = 4932] [serial = 4] [outer = 00000000]
19:34:29 INFO - PID 5288 | ++DOMWINDOW == 5 (07C35000) [pid = 4932] [serial = 5] [outer = 01073700]
19:34:29 INFO - PID 5288 | Hit MOZ_CRASH(nsWeakReference not thread-safe) at z:/build/build/src/xpcom/base/nsISupportsImpl.cpp:40
19:34:29 INFO - PID 5288 | ++DOMWINDOW == 6 (07C35C00) [pid = 4932] [serial = 6] [outer = 01073700]
19:34:29 INFO - PID 5288 | 1552937669319 Marionette INFO Testing http://web-platform.test:8000/css/css-multicol/column-count-used-001.html == http://web-platform.test:8000/css/reference/ref-filled-green-100px-square.xht
19:34:29 INFO - PID 5288 | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to c:\users\task_1552934921\appdata\local\temp\tmpjk5rze.mozrunner\runtests_leaks_4516_tab_pid5056.log
19:34:29 INFO - PID 5288 | [Child 4932, Main Thread] WARNING: site security information will not be persisted: file z:/build/build/src/security/manager/ssl/nsSiteSecurityService.cpp, line 506
19:34:29 INFO - PID 5288 | [Parent 3800, Main Thread] WARNING: '!parent', file z:/build/build/src/netwerk/ipc/NeckoParent.cpp, line 955
19:34:29 WARNING - Traceback (most recent call last):
19:34:29 WARNING - File "Z:\task_1552934921\build\tests\web-platform\tests\tools\wptrunner\wptrunner\executors\base.py", line 167, in run_test
19:34:29 WARNING - result = self.do_test(test)
19:34:29 WARNING - File "Z:\task_1552934921\build\tests\web-platform\tests\tools\wptrunner\wptrunner\executors\executormarionette.py", line 808, in do_test
19:34:29 WARNING - result = self.implementation.run_test(test)
19:34:29 WARNING - File "Z:\task_1552934921\build\tests\web-platform\tests\tools\wptrunner\wptrunner\executors\executormarionette.py", line 880, in run_test
19:34:29 WARNING - "height": 600})["value"]
19:34:29 WARNING - File "Z:\task_1552934921\build\venv\lib\site-packages\marionette_driver\decorators.py", line 36, in _
19:34:29 WARNING - m._handle_socket_failure()
19:34:29 WARNING - File "Z:\task_1552934921\build\venv\lib\site-packages\marionette_driver\marionette.py", line 650, in _handle_socket_failure
19:34:29 WARNING - reraise(exc, val, tb)
19:34:29 WARNING - File "Z:\task_1552934921\build\venv\lib\site-packages\marionette_driver\decorators.py", line 26, in _
19:34:29 WARNING - return func(*args, **kwargs)
19:34:29 WARNING - File "Z:\task_1552934921\build\venv\lib\site-packages\marionette_driver\marionette.py", line 590, in _send_message
19:34:29 WARNING - msg = self.client.request(name, params)
19:34:29 WARNING - File "Z:\task_1552934921\build\venv\lib\site-packages\marionette_driver\transport.py", line 273, in request
19:34:29 WARNING - return self.receive()
19:34:29 WARNING - File "Z:\task_1552934921\build\venv\lib\site-packages\marionette_driver\transport.py", line 153, in receive
19:34:29 WARNING - chunk = self._sock.recv(bytes_to_recv)
19:34:29 WARNING - error: [Errno 10054] An existing connection was forcibly closed by the remote host
19:34:29 WARNING -
19:34:29 INFO - mozcrash Copy/paste: Z:\task_1552934921\build\win32-minidump_stackwalk.exe c:\users\task_1552934921\appdata\local\temp\tmpjk5rze.mozrunner\minidumps\66e3dc6f-3b95-4fa2-8524-e8ea4987ab79.dmp Z:\task_1552934921\build\symbols
19:34:50 INFO - mozcrash Saved minidump as Z:\task_1552934921\build\blobber_upload_dir\66e3dc6f-3b95-4fa2-8524-e8ea4987ab79.dmp
19:34:50 INFO - mozcrash Saved app info as Z:\task_1552934921\build\blobber_upload_dir\66e3dc6f-3b95-4fa2-8524-e8ea4987ab79.extra
19:34:50 INFO - PROCESS-CRASH | /css/css-multicol/column-count-used-001.html | application crashed [@ static void MOZ_Crash(const char *, int, const char *)]
19:34:50 INFO - Crash dump filename: c:\users\task_1552934921\appdata\local\temp\tmpjk5rze.mozrunner\minidumps\66e3dc6f-3b95-4fa2-8524-e8ea4987ab79.dmp
19:34:50 INFO - Operating system: Windows NT
19:34:50 INFO - 6.1.7601 Service Pack 1
19:34:50 INFO - CPU: x86
19:34:50 INFO - GenuineIntel family 6 model 63 stepping 2
19:34:50 INFO - 8 CPUs
19:34:50 INFO -
19:34:50 INFO - GPU: UNKNOWN
19:34:50 INFO -
19:34:50 INFO - Crash reason: EXCEPTION_BREAKPOINT
19:34:50 INFO - Crash address: 0x541ce224
19:34:50 INFO - Process uptime: 5 seconds
19:34:50 INFO -
19:34:50 INFO - Thread 15 (crashed)
19:34:50 INFO - 0 xul.dll!static void MOZ_Crash(const char *, int, const char *) [Assertions.h:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 314 + 0x0]
19:34:50 INFO - eip = 0x541ce224 esp = 0x020ded8c ebp = 0x020ded90 ebx = 0x1d0504f0
19:34:50 INFO - esi = 0x5a785c8c edi = 0x20dfbb80 eax = 0x718be6b8 ecx = 0x00000028
19:34:50 INFO - edx = 0x00000049 efl = 0x00000202
19:34:50 INFO - Found by: given as instruction pointer in context
19:34:50 INFO - 1 xul.dll!nsAutoOwningThread::AssertCurrentThreadOwnsMe(char const *) [nsISupportsImpl.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 40 + 0x8]
19:34:50 INFO - eip = 0x541ce1ec esp = 0x020ded98 ebp = 0x020ded9c esi = 0x00912040
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 2 xul.dll!nsWeakReference::Release() [nsWeakReference.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 131 + 0xd]
19:34:50 INFO - eip = 0x541e023b esp = 0x020deda4 ebp = 0x020dedb0 esi = 0x00000000
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 3 xul.dll!nsDNSPrefetch::Release() [nsDNSPrefetch.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 99 + 0x3d]
19:34:50 INFO - eip = 0x543496db esp = 0x020dedb8 ebp = 0x020dedc8 esi = 0x00000000
19:34:50 INFO - edi = 0x1d050480
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 4 xul.dll!mozilla::net::nsHttpChannel::~nsHttpChannel() [nsHttpChannel.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 359 + 0x1b]
19:34:50 INFO - eip = 0x5473bb1c esp = 0x020dedd0 ebp = 0x020dede0 ebx = 0x00000001
19:34:50 INFO - esi = 0x1a12f800 edi = 0x1a12ff9c
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 5 xul.dll!void mozilla::net::nsHttpChannel::~nsHttpChannel() [nsHttpChannel.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 350 + 0x5]
19:34:50 INFO - eip = 0x5479464b esp = 0x020dede8 ebp = 0x020dedec ebx = 0x00000001
19:34:50 INFO - esi = 0x1a12f800 edi = 0x1a12f800
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 6 xul.dll!mozilla::net::HttpBaseChannel::Release() [HttpBaseChannel.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 402 + 0x9]
19:34:50 INFO - eip = 0x546d717d esp = 0x020dedf4 ebp = 0x020dee00 esi = 0x00000000
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 7 xul.dll!void std::_Func_impl_no_alloc<`lambda at z:/build/build/src/netwerk/protocol/http/nsHttpChannel.cpp:550:29',void,bool,nsresult>::_Delete_this(bool) [functional:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 1240 + 0x18]
19:34:50 INFO - eip = 0x547996ee esp = 0x020dee08 ebp = 0x020dee18 esi = 0x1c4adc00
19:34:50 INFO - edi = 0x1a12f800
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 8 xul.dll!static void mozilla::detail::RunnableFunction<`lambda at z:/build/build/src/netwerk/base/nsNetUtil.cpp:2658:15'>::~RunnableFunction() [nsThreadUtils.h:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 553 + 0x2c]
19:34:50 INFO - eip = 0x5437b4bc esp = 0x020dee20 ebp = 0x020dee30 ebx = 0x00000000
19:34:50 INFO - esi = 0x1fcf4f90 edi = 0x00000000
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 9 xul.dll!mozilla::Runnable::Release() [nsThreadUtils.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 50 + 0x9]
19:34:50 INFO - eip = 0x5427505c esp = 0x020dee38 ebp = 0x020dee44 ebx = 0x00000000
19:34:50 INFO - esi = 0x1fcf4f90 edi = 0x00000000
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 10 xul.dll!nsThread::ProcessNextEvent(bool,bool *) [nsThread.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 1228 + 0x28]
19:34:50 INFO - eip = 0x5427ffba esp = 0x020dee4c ebp = 0x020df31c esi = 0x020dee50
19:34:50 INFO - edi = 0x00956ae0
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 11 xul.dll!NS_ProcessNextEvent(nsIThread *,bool) [nsThreadUtils.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 482 + 0x11]
19:34:50 INFO - eip = 0x54282f04 esp = 0x020df324 ebp = 0x020df340 ebx = 0x009ef210
19:34:50 INFO - esi = 0x020df333 edi = 0x00000001
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 12 xul.dll!mozilla::net::nsSocketTransportService::Run() [nsSocketTransportService2.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 1013 + 0xa]
19:34:50 INFO - eip = 0x5439666c esp = 0x020df348 ebp = 0x020df644 ebx = 0x009ef210
19:34:50 INFO - esi = 0x020df350
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 13 xul.dll!nsThread::ProcessNextEvent(bool,bool *) [nsThread.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 1179 + 0x6]
19:34:50 INFO - eip = 0x5427fbf5 esp = 0x020df64c ebp = 0x020dfb1c ebx = 0x00000000
19:34:50 INFO - esi = 0x020df650 edi = 0x00956ae0
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 14 xul.dll!NS_ProcessNextEvent(nsIThread *,bool) [nsThreadUtils.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 482 + 0x11]
19:34:50 INFO - eip = 0x54282f04 esp = 0x020dfb24 ebp = 0x020dfb40 ebx = 0x009d9800
19:34:50 INFO - esi = 0x020dfb33 edi = 0x0094b3c0
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 15 xul.dll!mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate *) [MessagePump.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 333 + 0xa]
19:34:50 INFO - eip = 0x548bceca esp = 0x020dfb48 ebp = 0x020dfb74 ebx = 0x009d9800
19:34:50 INFO - esi = 0x009d98c0
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 16 xul.dll!MessageLoop::RunInternal() [message_loop.cc:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 315 + 0x5]
19:34:50 INFO - eip = 0x54873ad1 esp = 0x020dfb7c ebp = 0x020dfb98 ebx = 0x009d9820
19:34:50 INFO - esi = 0x0094b3c0 edi = 0x0094b3c0
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 17 xul.dll!MessageLoop::RunHandler() [message_loop.cc:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 308 + 0x7]
19:34:50 INFO - eip = 0x548739ec esp = 0x020dfba0 ebp = 0x020dfbcc esi = 0x0094b3c0
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 18 xul.dll!MessageLoop::Run() [message_loop.cc:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 290 + 0x5]
19:34:50 INFO - eip = 0x548738bf esp = 0x020dfbd4 ebp = 0x020dfbec ebx = 0x009d9820
19:34:50 INFO - esi = 0x00956ae0 edi = 0x0094b3c0
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 19 xul.dll!nsThread::ThreadFunc(void *) [nsThread.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 454 + 0xa]
19:34:50 INFO - eip = 0x5427c9bb esp = 0x020dfbf4 ebp = 0x020dfc18
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 20 nss3.dll!_PR_NativeRunThread [pruthr.c:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 397 + 0x6]
19:34:50 INFO - eip = 0x64bff2d8 esp = 0x020dfc20 ebp = 0x020dfc40 ebx = 0x6738e130
19:34:50 INFO - esi = 0x009a2240 edi = 0x009a2190
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 21 nss3.dll!static unsigned int pr_root(void *) [w95thred.c:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 137 + 0x7]
19:34:50 INFO - eip = 0x64bedd0d esp = 0x020dfc48 ebp = 0x020dfc4c ebx = 0x6738e130
19:34:50 INFO - esi = 0x64bedd00 edi = 0x00289910
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 22 ucrtbase.dll!__RtlConvertUlongToLargeInteger + 0x7fe9
19:34:50 INFO - eip = 0x6738e16f esp = 0x020dfc54 ebp = 0x020dfc88
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 23 kernel32.dll!RtlMultiByteToUnicodeN + 0x73c
19:34:50 INFO - eip = 0x77583c45 esp = 0x020dfc90 ebp = 0x020dfc94
19:34:50 INFO - Found by: previous frame's frame pointer
19:34:50 INFO - 24 mozglue.dll!static void patched_BaseThreadInitThunk(int, void *, void *) [WindowsDllBlocklist.cpp:cbcf5b79aa440b46a240983ffb64e76ac25b477b : 705 + 0x41]
19:34:50 INFO - eip = 0x71866da4 esp = 0x020dfc9c ebp = 0x020dfccc
19:34:50 INFO - Found by: previous frame's frame pointer
19:34:50 INFO - 25 ntdll.dll!__RtlUserThreadStart + 0x27
19:34:50 INFO - eip = 0x77a137f5 esp = 0x020dfcd4 ebp = 0x020dfd0c ebx = 0x00289910
19:34:50 INFO - esi = 0x00000000 edi = 0x00000000
19:34:50 INFO - Found by: call frame info
19:34:50 INFO - 26 ntdll.dll!_RtlUserThreadStart + 0x1b
19:34:50 INFO - eip = 0x77a137c8 esp = 0x020dfd14 ebp = 0x020dfd24
19:34:50 INFO - Found by: call frame info
Updated•6 years ago
|
Comment 1•6 years ago
|
||
This is the thread-safety assertion from nsHttpChannel. CSS only does network stuff on the main thread so seems unlikely to be the culprit here.
Valentin, this seems to be asserting when destroying the weak ref to the mListener member in nsDNSPrefetch, do you know if there's any recent change that could make this trigger? The code using nsDNSPrefetch doesn't look particularly new...
Updated•6 years ago
|
Comment 2•6 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #1)
This is the thread-safety assertion from nsHttpChannel. CSS only does network stuff on the main thread so seems unlikely to be the culprit here.
Valentin, this seems to be asserting when destroying the weak ref to the mListener member in nsDNSPrefetch, do you know if there's any recent change that could make this trigger? The code using nsDNSPrefetch doesn't look particularly new...
No recent changes that I know of.
From what I can tell, we should make sure to always null out mDNSPrefetch in OnStopRequest. This does currently happen, but only if mTransaction is not null. Otherwise, we drop the reference in the destructor, and if that's called off-main-thread, we'll assert.
| Comment hidden (Intermittent Failures Robot) |
Comment 5•6 years ago
|
||
nsDNSPrefetch holds a weak reference to nsHttpChannel. Weak references are not thread safe so, nsDNSPrefetch needs to be released on the main thread, in OnStopRequest.
Otherwise it gets released when the last reference to nsHttpChannel is dropped, which could be from another thread.
Updated•6 years ago
|
Comment 10•6 years ago
|
||
| bugherder | ||
Comment 18•6 years ago
|
||
This is still failing:
https://treeherder.mozilla.org/#/jobs?repo=autoland&resultStatus=testfailed%2Cbusted%2Cexception&classifiedState=unclassified&revision=529782921812aaf0558fbb22384b3051174657d3
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=235709762&repo=autoland&lineNumber=2430
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=235705433&repo=autoland&lineNumber=28343
08:27:58 INFO - PROCESS-CRASH | /css/CSS2/floats-clear/adjacent-floats-001.xht | application crashed [@ static void MOZ_Crash(const char *, int, const char *)]
08:27:58 INFO - Crash dump filename: c:\users\task_1553413147\appdata\local\temp\tmpl_dy3u.mozrunner\minidumps\ef102fb0-3dc6-46e9-8c63-05a640489bc3.dmp
08:27:58 INFO - Operating system: Windows NT
08:27:58 INFO - 6.1.7601 Service Pack 1
08:27:58 INFO - CPU: x86
08:27:58 INFO - GenuineIntel family 6 model 63 stepping 2
08:27:58 INFO - 8 CPUs
08:27:58 INFO -
08:27:58 INFO - GPU: UNKNOWN
08:27:58 INFO -
08:27:58 INFO - Crash reason: EXCEPTION_BREAKPOINT
08:27:58 INFO - Crash address: 0x50d4da44
08:27:58 INFO - Process uptime: 6 seconds
08:27:58 INFO -
08:27:58 INFO - Thread 15 (crashed)
08:27:58 INFO - 0 xul.dll!static void MOZ_Crash(const char *, int, const char *) [Assertions.h:529782921812aaf0558fbb22384b3051174657d3 : 314 + 0x0]
08:27:58 INFO - eip = 0x50d4da44 esp = 0x0b2cec2c ebp = 0x0b2cec30 ebx = 0x156223f0
08:27:58 INFO - esi = 0x57325d9c edi = 0x151ff380 eax = 0x6649e6b8 ecx = 0x00000028
08:27:58 INFO - edx = 0x00000049 efl = 0x00000202
08:27:58 INFO - Found by: given as instruction pointer in context
08:27:58 INFO - 1 xul.dll!nsAutoOwningThread::AssertCurrentThreadOwnsMe(char const *) [nsISupportsImpl.cpp:529782921812aaf0558fbb22384b3051174657d3 : 40 + 0x8]
08:27:58 INFO - eip = 0x50d4da0c esp = 0x0b2cec38 ebp = 0x0b2cec3c esi = 0x00812040
08:27:58 INFO - Found by: call frame info
08:27:58 INFO - 2 xul.dll!nsWeakReference::Release() [nsWeakReference.cpp:529782921812aaf0558fbb22384b3051174657d3 : 131 + 0xd]
08:27:58 INFO - eip = 0x50d5faeb esp = 0x0b2cec44 ebp = 0x0b2cec50 esi = 0x00000000
08:27:58 INFO - Found by: call frame info
08:27:58 INFO - 3 xul.dll!nsDNSPrefetch::Release() [nsDNSPrefetch.cpp:529782921812aaf0558fbb22384b3051174657d3 : 99 + 0x3d]
08:27:58 INFO - eip = 0x50ecbbbb esp = 0x0b2cec58 ebp = 0x0b2cec68 esi = 0x00000000
08:27:58 INFO - edi = 0x15622380
08:27:58 INFO - Found by: call frame info
08:27:58 INFO - 4 xul.dll!mozilla::net::nsHttpChannel::~nsHttpChannel() [nsHttpChannel.cpp:529782921812aaf0558fbb22384b3051174657d3 : 359 + 0x1b]
08:27:58 INFO - eip = 0x512c242c esp = 0x0b2cec70 ebp = 0x0b2cec80 ebx = 0x00000001
08:27:58 INFO - esi = 0x11139000 edi = 0x1113979c
08:27:58 INFO - Found by: call frame info
08:27:58 INFO - 5 xul.dll!void mozilla::net::nsHttpChannel::~nsHttpChannel() [nsHttpChannel.cpp:529782921812aaf0558fbb22384b3051174657d3 : 350 + 0x5]
08:27:58 INFO - eip = 0x5131b09b esp = 0x0b2cec88 ebp = 0x0b2cec8c ebx = 0x00000001
08:27:58 INFO - esi = 0x11139000 edi = 0x11139000
08:27:58 INFO - Found by: call frame info
| Comment hidden (Intermittent Failures Robot) |
Comment 20•6 years ago
|
||
This issue seems to have been caused by bug 1521729.
It's not entirely clear to me how the lifecycle of nsHttpChannel has changed there.
Kershaw, can you take a look?
| Assignee | ||
Comment 21•6 years ago
|
||
Revert the changes in bug 1521729.
| Assignee | ||
Comment 22•6 years ago
|
||
(In reply to Valentin Gosu [:valentin] from comment #20)
This issue seems to have been caused by bug 1521729.
It's not entirely clear to me how the lifecycle of nsHttpChannel has changed there.
Kershaw, can you take a look?
Let's backout bug 1521729 first and see if this fix this issue.
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Comment 23•6 years ago
|
||
Comment 24•6 years ago
|
||
Comment 25•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Description
•