Bug 1536236 - Release mDNSPrefetch in OnStopRequest (on the main thread) r=kershaw

nsDNSPrefetch holds a weak reference to nsHttpChannel. Weak references are not thread safe so, nsDNSPrefetch needs to be released on the main thread, in OnStopRequest.
Otherwise it gets released when the last reference to nsHttpChannel is dropped, which could be from another thread.

Differential Revision: https://phabricator.services.mozilla.com/D24174